<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="cancel_order">Отмена ордера</string>
    <string name="bot_order">Бот</string>
    <string name="down_order">Вниз</string>
    <string name="up_order">Вверх</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>

    <string name="goOrder">Отправить</string>
    <string name="maxVal">Max</string>
    <string name="minVal">Min</string>
    <string name="postFollow">Поставить впереди</string>
    <string name="postNachalo">Перепоставить</string>
    <string name="pereOrder">Перестановка ордера</string>

    <string name="dopTitle">Дополнительные функции</string>

    <string name="skrit">Скрыть</string>
    <string name="grav">Grav</string>

    <string name="setting">Настройки</string>

    <string name="x">X</string>


</resources>
