<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textTitleAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Add Order"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="18sp" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <EditText
        android:id="@+id/editTextVal"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:windowSoftInputMode="stateHidden" />

    <Button
        android:id="@+id/buttonmaxVal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/maxVal" />

    <LinearLayout
        android:id="@+id/layAdInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    </LinearLayout>

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/goOrderAddLimit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/goOrder" />

        <Button
            android:id="@+id/buttonCancelad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>
